--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 asyncio==3.4.3
 aiofiles==23.2.1
 aiohttp==3.8.5
-numpy==1.26.0
+numpy==1.19.5  # Menggunakan versi Numpy yang kompatibel dengan Python 3.8
 pillow==10.0.1
 psutil
 pyrogram==2.0.106
@@ -9,6 +9,6 @@ py-tgcalls==0.9.7
 python-dotenv==1.0.0
 tgcrypto==1.2.5
 speedtest-cli==2.1.3
-git+https://github.com/yt-dlp/yt-dlp@master
-git+https://github.com/alexmercerind/youtube-search-python@main
-git+https://github.com/joetats/youtube_search@master
+yt-dlp@ https://github.com/yt-dlp/yt-dlp/archive/master.tar.gz
+youtube-search-python@ https://github.com/alexmercerind/youtube-search-python/archive/main.tar.gz
+youtube_search@ https://github.com/joetats/youtube_search/archive/master.tar.gz
